--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Legal Prep Masters</title>
 </head>
 <body>
-    <div>
-        <nav>
 
-        </nav>
-    </div>
+    <div class="header wrap">
+
+        <header class="heading">
+
+                <h1>Legal Prep Masters</h1>
+            
+        </header>
+
+    </div> <!--header wrap -->
 
 </body>
 </html>
