--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.js" />
     <title>Legal Prep Masters</title>
 </head>
 <body>
@@ -12,8 +14,14 @@
 
         <header class="heading">
 
-                <h1>Legal Prep Masters</h1>
-            
+            <h1>Legal Prep Masters</h1>
+            <ul>
+                <li>Location</li>
+                <li>Hours</li>
+                <li>Phone</li>
+            </ul>
+            <button>Appointments</button>
+
         </header>
 
     </div> <!--header wrap -->
